--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="flex justify-between h-20 items-center">
                 <!-- Logo -->
                 <a href="#inicio" class="flex-shrink-0 flex items-center gap-3 hover:opacity-80 transition-opacity">
-                    <img src="./resol_1.jpg" 
+                    <img src="./logo2.png" 
                          onerror="this.src='https://ui-avatars.com/api/?name=TS&background=0D8ABC&color=fff&rounded=true'" 
                          alt="Logo TechSquads" 
                          class="h-10 md:h-12 w-auto rounded-lg shadow-lg border border-slate-700">
@@ -345,3 +345,4 @@
     </script>
 </body>
 </html>
+
